fix: :bug: fix footer icons navigation alignment

--- a/src/features/components/organisms/navigation/nav-sections-container/render-section-items.module.scss
+++ b/src/features/components/organisms/navigation/nav-sections-container/render-section-items.module.scss
@@ -20,6 +20,6 @@
     }
 
     &_title {
-        min-block-size: 2rem;
+        min-block-size: 3rem;
     }
 }
